# cargo-breaking

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  cargo-breaking.toml  rust-toolchain
.github/workflows/: main.yml  pr.yml  release.yml
book/: book.toml
book/book/: 1_foreword.html  2_0_process.html  2_1_overview.html  2_4_manifest.html  2_5_api_extraction.html  2_7_diagnosis.html  404.html  print.html  searchindex.js  searchindex.json
book/src/: 1_foreword.md  2_0_process.md  2_1_overview.md  2_2_config.md  2_3_manifest.md  2_4_crate.md  2_4_manifest.md  2_5_api_extraction.md  2_5_rustdoc.md  2_6_comparator.md  2_6_comparison.md  2_7_diagnosis.md  2_7_next_version.md  2_8_next_version.md  3_book.md  SUMMARY.md
docs/: 1_foreword.html  2_0_process.html  2_1_overview.html  2_2_config.html  2_3_manifest.html  2_3_repository.html  2_4_crate.html  2_4_manifest.html  2_5_api_extraction.html  2_5_rustdoc.html  2_6_comparator.html  2_6_comparison.html  2_7_diagnosis.html  2_7_next_version.html  2_8_next_version.html  3_book.html  404.html  CNAME  index.html  print.html  searchindex.js  searchindex.json
docs/book/: 2_2_config.html  2_8_next_version.html
docs/src/: 2_3_repository.md  SUMMARY.md
src/: ast.rs  cli.rs  comparator.rs  diagnosis.rs  git.rs  glue.rs  invocation_settings.rs  lib.rs  main.rs  manifest.rs  public_api.rs  rustdoc.rs
src/cli/: config.rs  git.rs  glue_gen.rs  manifest.rs  standard_compiler.rs
src/comparator/: utils.rs
src/compiler/: instrumented_compiler.rs  mod.rs  standard_compiler.rs  sysroot_guesser.rs
src/public_api/: assoc_const.rs  assoc_type.rs  functions.rs  imports.rs  methods.rs  modules.rs  trait_defs.rs  trait_impls.rs  traits.rs  types.rs  utils.rs
src/rustdoc/: types.rs
tests/: enum.rs  function.rs  method.rs  modules.rs  struct.rs  structs.rs  trait_def.rs  trait_defs.rs  trait_impl.rs  trait_impls.rs
