[package]
name = "cargo-breaking"
version = "0.0.3-alpha.0"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>"]
edition = "2018"
description = "checks the diff between your last publish and the current code, and lets you know if there are breaking changes so you can bump to the right version."
keywords = ["release", "api", "breaking", "change"]
license = "MPL-2.0"
repository = "https://github.com/iomentum/cargo-breaking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
anyhow = "1.0"
git2 = "0.13"
cargo_toml = "0.9"
semver = "1.0"
