[package]
name = "cargo-breaking"
version = "0.0.3-alpha.0"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>"]
edition = "2018"
description = "checks the diff between your last published and the current code, and lets you know if there are breaking changes so you can bump to the right version."
keywords = ["release", "api", "breaking", "change"]
license = "MPL-2.0"
repository = "https://github.com/iomentum/cargo-breaking"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cargo-breaking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
git2 = "0.13"
cargo_toml = "0.9"
semver = { version = "1.0", features = ["serde"] }
clap = "2.33"
tap = "1.0"
tempfile = "3.2"
fs_extra = "1.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
fake = "2.4.1"
rand = "0.8.4"

[package.metadata.rust-analyzer]
rustc_private = true
