[package]
name = "cargo-breaking"
version = "0.0.4-alpha.0"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>", "Sasha Pourcelot <sasha.pourcelot@protonmail.com>", "Tom Niget <niget.tom@gmail.com>"]
edition = "2021"
description = "checks the diff between your last publish and the current code, and lets you know if there are breaking changes so you can bump to the right version."
keywords = ["release", "api", "breaking", "change"]
license = "MPL-2.0"
repository = "https://github.com/iomentum/cargo-breaking"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cargo-breaking"

[dependencies]
anyhow = "1.0"
git2 = "0.13"
cargo_toml = "0.9"
semver = "1.0"
clap = { version = "3.1.18", features = ["cargo"] }
tap = "1.0"
log = "0.4.17"
tempfile = "3.3.0"
fs_extra = "1.2.0"
fake = "2.4.3"
toml = "0.5.9"
serde_json = "1.0.81"
rustdoc-types = "0.11.0"
itertools = "0.10.3"
env_logger = "0.9.0"
derivative = "2.2.0"
once_cell = "1.12.0"
serde = "1.0.137"
figment = { version = "0.10.6", features = ["toml", "json", "env"] }